<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_copy_text">复制</string>
    <string name="tv_cut_text">剪切</string>
    <string name="tv_paste_text">粘贴</string>
    <string name="tv_delete_text">删除</string>
    <string name="tv_quit_text">退出</string>

</resources>
