<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#5CACEE"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/lv_fileName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:id="@+id/ll_file_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#A3A3A3"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/copy"
            android:gravity="center"
            android:text="@string/tv_copy_text"
            android:textColor="#8FFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_cut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/cut"
            android:gravity="center"
            android:text="@string/tv_cut_text"
            android:textColor="#8FFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_paste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/paste"
            android:gravity="center"
            android:text="@string/tv_paste_text"
            android:textColor="#8FFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/trash"
            android:gravity="center"
            android:text="@string/tv_delete_text"
            android:textColor="#8FFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/logout"
            android:gravity="center"
            android:text="@string/tv_quit_text"
            android:textColor="#8FFF"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>